<resources>
    <string name="app_name">ESPApplication</string>
    <string name="STATUS_ON">CONECTADO</string>
    <string name="STATUS_OFF">DESCONECTADO</string>
    <string name="STATUS_CONNECTING">CONECTANDO...</string>
    <string name="field0">Perfil </string>
    <string name="field1">Alcohol (mg/L)</string>
    <string name="field2">Altitud (m)</string>
    <string name="field3">CO2 (mg/L)</string>
    <string name="field4">Humedad (%)</string>
    <string name="field5">Presión (hPa)</string>
    <string name="field6">Temperatura (C°)</string>
    <string name="defaultValueField">value</string>
    <string name="profileButton">Cambiar</string>
    <string name="defaultProfileName">ProfileName</string>
    <string name="profileNameField">Nombre</string>
    <string name="selectProfileButton">Seleccionar</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="src_image_descrip">Vector Image</string>
    <string name="defaultEditNameText">Rellenar aqui</string>
    <string name="pushProfileButton">Guardar</string>
    <string name="defaultEditMaxValueText">Max. Valor</string>
    <string name="defaultEditMinValueText">Min. Valor</string>
    <string name="warningMessage">Complete todos los campos!!!</string>
    <string name="title1">ESP 32 APP</string>
    <string name="title2">GRÁFICA</string>
    <string name="title_activity_display_profile">DisplayProfileActivity</string>
    <string name="title3">MOSTRAR PERFIL</string>
    <string name="title4">CREAR NUEVO PERFIL</string>
    <string name="title5">PEEFILES DISPONIBLES</string>
    <string name="deleteProfileButton">BORRAR</string>
    <string name="modifyProfileButton">Modificar</string>
</resources>
