<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_main">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/titleStyle"
        android:text="@string/title3">
    </TextView>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tableDisplayProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TableRow>
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/profileNameField"
                android:gravity="center"
                style="@style/cellTableStyle">
            </TextView>
            <TextView
                android:autofillHints="name"
                android:id="@+id/displayProfileName"
                android:layout_width="200dp"
                android:layout_height="50dp"
                style="@style/editTextTheme"
                android:textSize="15sp">
            </TextView>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/tableDisplayProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/field1"
                android:gravity="center"
                style="@style/cellTableStyle">
            </TextView>
            <TextView
                android:id="@+id/displayMaxAlcohol"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">
            </TextView>
            <TextView
                android:id="@+id/displayMinAlcohol"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">
            </TextView>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/field2"
                android:gravity="center"
                style="@style/cellTableStyle">
            </TextView>
            <TextView
                android:id="@+id/displayMaxAltitud"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">
            </TextView>
            <TextView
                android:id="@+id/displayMinAltitud"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">

            </TextView>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/field3"
                android:gravity="center"
                style="@style/cellTableStyle">
            </TextView>
            <TextView
                android:id="@+id/displayMaxCO2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">
            </TextView>
            <TextView
                android:id="@+id/displayMinCO2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">
            </TextView>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/field4"
                android:gravity="center"
                style="@style/cellTableStyle">
            </TextView>
            <TextView
                android:id="@+id/displayMaxHumedad"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">
            </TextView>
            <TextView
                android:id="@+id/displayMinHumedad"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">

            </TextView>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/field5"
                android:gravity="center"
                style="@style/cellTableStyle">
            </TextView>
            <TextView
                android:id="@+id/displayMaxPresion"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">
            </TextView>
            <TextView
                android:id="@+id/displayMinPresion"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">

            </TextView>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/field6"
                android:gravity="center"
                style="@style/cellTableStyle">
            </TextView>
            <TextView
                android:id="@+id/displayMaxTemp"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">
            </TextView>
            <TextView
                android:id="@+id/displayMinTemp"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="15sp"
                style="@style/editTextTheme">

            </TextView>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>