<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_main"
    tools:context=".activities.MainActivity"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/statusText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/STATUS_OFF"
        android:gravity="center"
        android:visibility="gone"
        >
    </TextView>
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/titleStyle"
        android:textStyle="bold"
        android:text="ESP32 APP"
        android:gravity="center">
    </TextView>
    <TableLayout
        android:id="@+id/profileMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <TableRow>

            <TextView
                style="@style/cellTableStyle"
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/field0">

            </TextView>

            <TextView
                android:id="@+id/tvProfileName"
                android:layout_width="125dp"
                android:layout_height="25dp"
                style="@style/cellTableStyle"
                android:gravity="center"
                android:text="default">
            </TextView>
            <Button
                android:id="@+id/profileButton"
                android:layout_width="90dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                style="@style/cellTableStyle"
                android:textStyle="bold"
                android:text="@string/profileButton">
            </Button>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:shrinkColumns="*"
        >
        <TableRow>
            <TextView
                android:layout_width="110dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/field1">

            </TextView>

            <TextView
                android:id="@+id/tvField1"
                style="@style/cellTableStyle"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="value">

            </TextView>
            <ImageView
                android:id="@+id/tvField1Vec"
                android:layout_width="50dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center">

            </ImageView>
        </TableRow>
        <TableRow>
            <TextView
                android:textStyle="bold"
                android:layout_width="110dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center"
                android:text="@string/field2">

            </TextView>

            <TextView
                android:id="@+id/tvField2"
                style="@style/cellTableStyle"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="value">

            </TextView>

            <ImageView
                android:id="@+id/tvField2Vec"
                android:layout_width="50dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center">

            </ImageView>
        </TableRow>
        <TableRow>
            <TextView
                android:textStyle="bold"
                android:layout_width="110dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center"
                android:text="@string/field3">

            </TextView>

            <TextView
                android:id="@+id/tvField3"
                android:layout_width="150dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center"
                android:text="value">

            </TextView>

            <ImageView
                android:id="@+id/tvField3Vec"
                android:layout_width="50dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center">

            </ImageView>
        </TableRow>
        <TableRow>
            <TextView
                android:textStyle="bold"
                android:layout_width="110dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center"
                android:text="@string/field4">

            </TextView>

            <TextView
                android:id="@+id/tvField4"
                android:layout_width="150dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center"
                android:text="value">

            </TextView>

            <ImageView
                android:id="@+id/tvField4Vec"
                android:layout_width="50dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center">

            </ImageView>
        </TableRow>
        <TableRow>
            <TextView
                android:textStyle="bold"
                android:layout_width="110dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center"
                android:text="@string/field5">

            </TextView>

            <TextView
                android:id="@+id/tvField5"
                android:layout_width="150dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center"
                android:text="value">

            </TextView>

            <ImageView
                android:id="@+id/tvField5Vec"
                android:layout_width="50dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center">

            </ImageView>
        </TableRow>
        <TableRow>
            <TextView
                android:textStyle="bold"
                android:layout_width="110dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center"
                android:text="@string/field6">

            </TextView>

            <TextView
                android:id="@+id/tvField6"
                android:layout_width="150dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center"
                android:text="value">

            </TextView>

            <ImageView
                android:id="@+id/tvField6Vec"
                android:layout_width="50dp"
                android:layout_height="40dp"
                style="@style/cellTableStyle"
                android:gravity="center">

            </ImageView>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>





